--- a/src/components/footer/footer.html
+++ b/src/components/footer/footer.html
@@ -3,19 +3,19 @@
     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-12 mb-12">
       <div class="space-y-4">
         <div class="flex items-center gap-2">
-          <div class="flex items-center justify-center size-6 rounded bg-primary/10 text-primary">
-            <span class="material-symbols-outlined text-sm">balance</span>
+          <div class="flex items-center justify-center w-36 h-auto">
+            <img src="images/logo_red.png" alt="Vista Law Logo" class="w-full h-full object-contain">
           </div>
-          <h4 class="text-lg font-bold text-[#0d121b] dark:text-white">{{ 'footer.companyName' | translate }}</h4>
+          <!-- <h4 class="text-lg font-bold text-[#0d121b] dark:text-white">{{ 'footer.companyName' | translate }}</h4> -->
         </div>
         <p class="text-sm text-gray-500 leading-relaxed">
           {{ 'footer.description' | translate }}
         </p>
-        <div class="flex gap-4 pt-2">
+        <!-- <div class="flex gap-4 pt-2">
           <a class="text-gray-400 hover:text-primary transition-colors" href="#"><span class="material-symbols-outlined">public</span></a>
           <a class="text-gray-400 hover:text-primary transition-colors" href="#"><span class="material-symbols-outlined">work</span></a>
           <a class="text-gray-400 hover:text-primary transition-colors" href="#"><span class="material-symbols-outlined">mail</span></a>
-        </div>
+        </div> -->
       </div>
       <!-- <div>
         <h4 class="text-sm font-bold uppercase tracking-wider text-[#0d121b] dark:text-white mb-6">Practice Areas</h4>
