--- a/src/components/hero/hero.html
+++ b/src/components/hero/hero.html
@@ -7,7 +7,7 @@
             <span class="material-symbols-outlined text-sm mr-1">verified</span> 
             {{ 'home.hero.badge' | translate }}
           </div>
-          <h1 class="text-4xl lg:text-6xl font-black leading-tight tracking-tight text-[#0d121b] dark:text-white">
+          <h1 class="text-4xl lg:text-[57px] font-black leading-tight lg:leading-[60px] tracking-tight text-[#0d121b] dark:text-white">
               <p class="text-primary">{{ 'home.hero.titleHighlight1' | translate }}.</p>
               <p class="text-primary">{{ 'home.hero.titleHighlight2' | translate }}.</p>
               {{ 'home.hero.title' | translate }} 
